# search_engine

./: CMakeLists.txt  README.md  answers.json  config.json  requests.json
configuration/resources/: file001.txt  file002.txt  file003.txt  file004.txt
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: config.json  file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTests.cpp  SearchServerTest.cpp
